RESOLVED FIXED203004
Webview's drawing area may stay frozen on cross-site back/forward navigation
https://bugs.webkit.org/show_bug.cgi?id=203004
Summary Webview's drawing area may stay frozen on cross-site back/forward navigation
Chris Dumez
Reported 2019-10-15 14:06:03 PDT
Webview's drawing area may stay frozen on cross-site back/forward navigation.
Attachments
Patch (4.18 KB, patch)
2019-10-15 14:49 PDT, Chris Dumez
no flags
Chris Dumez
Comment 1 2019-10-15 14:49:22 PDT
WebKit Commit Bot
Comment 2 2019-10-15 16:17:24 PDT
Comment on attachment 381022 [details] Patch Clearing flags on attachment: 381022 Committed r251166: <https://trac.webkit.org/changeset/251166>
WebKit Commit Bot
Comment 3 2019-10-15 16:17:26 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 4 2019-10-15 16:37:45 PDT
Note You need to log in before you can comment on or make changes to this bug.